--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,14 @@
 {
-    "name": "chenka-crud-dev",
+    "name": "borisvargas",
     "version": "0.0.0",
     "dependencies": {
-        "modernizr": "~2.8.*",
-        "jquery": "~2.1.0",
-        "underscore": "~1.6.0",
-        "backbone": "~1.1.0",
-        "foundation": "~5.3.3",
+        "modernizr": "^2.8.*",
+        "jquery": "^2.1.0",
+        "underscore": "^1.6.0",
+        "backbone": "^1.1.0",
+        "foundation": "^5.3.3",
         "foundation-icon-fonts": "*",
-        "ckeditor": "4.*"
+        "ckeditor": "^4.*"
     },
     "devDependencies": {}
 }
