--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"require": {
 		"laravel/framework": "4.2.*",
 		"laracasts/commander": "~1.0",
-		"mews/purifier": "dev-master"
+        "php": "~5.5.12"
 	},
 	"autoload": {
 		"classmap": [
