--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"laracasts/commander": "~1.0",
-        "php": "~5.5.12"
+		"laracasts/commander": "~1.0"
 	},
 	"autoload": {
 		"classmap": [
