--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 /node_modules
 /app/assets/bower_components
 /test/bower_components
-/public/assets
+/public/assets/ckeditor
 composer.phar
 .env.*.php
 .env.php
