--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "ckeditor": "^4.*",
     "backbone.radio": "~0.8.0",
     "hogan": "~3.0.2",
-    "layoutmanager": "~0.9.5"
+    "layoutmanager": "~0.9.5",
+    "jquery-file-upload": "~9.9.2",
+    "jquery-ui": "~1.11.2"
   },
   "devDependencies": {}
 }
