--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -3,6 +3,12 @@
         Options -MultiViews
     </IfModule>
 
+    <FilesMatch "\.(htaccess|htpasswd|ini|log|sh|inc|bak)$">
+    Order Allow,Deny
+    Deny from all
+    </FilesMatch>
+
+
     RewriteEngine On
 
     # Redirect Trailing Slashes...
