fixed htaccess, added twiter share

--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -8,6 +8,9 @@
     # Redirect Trailing Slashes...
     RewriteRule ^(.*)/$ /$1 [L,R=301]
 
+    RewriteCond %{HTTP_HOST} ^www\.borisvargas\.com [NC]
+    RewriteRule ^(.*)$ http://borisvargas.com/$1 [L,R=301]
+
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
